feat: 暴露统一查询描述契约